--- a/Lamp/css/style.css
+++ b/Lamp/css/style.css
@@ -261,6 +261,7 @@ fieldset {
 /*********************/
 /* VALIDATION ERRORS 
 /*********************/
+#instructions.red,
 label.red,
 div.red,
 p.red
@@ -872,6 +873,7 @@ label.death_date {
 #success h3 {
     margin-top: 1em;
     margin-bottom: 0.5em;
+    font-size: 20px;
 }
 
 #success p {
